@@ -1,0 +1,15 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Your orders</title>
+    </head>
+    <body>
+        <h1>Below is the list of all orders placed by you</h1>
+        <% for(let i=0; i<ordersList.length; i++) { %>
+            <hr>
+            <pre><%= JSON.stringify(ordersList[i].dish,null,2) %></pre>
+            <p>Date: <%= ordersList[i].date %></p>
+        <% } %>
+    </body>
+</html>
