@@ -18,3 +18,6 @@
 26-03-2023
     Added feature for users to place order
     Added feature for admin to access his dashboard by typing `localhost:3000/admin/PASSWORD` into the address bar where PASSWORD is admin password.
+
+27-03-2023
+    Added functionality for users to check their order history
